--- a/Projet numérique - Calcul différentiel.ipynb
+++ b/Projet numérique - Calcul différentiel.ipynb
@@ -60,8 +60,8 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: autograd in c:\\users\\calou\\anaconda3\\lib\\site-packages (1.3)\n",
-      "Requirement already satisfied: future>=0.15.2 in c:\\users\\calou\\anaconda3\\lib\\site-packages (from autograd) (0.18.2)\n",
       "Requirement already satisfied: numpy>=1.12 in c:\\users\\calou\\anaconda3\\lib\\site-packages (from autograd) (1.20.1)\n",
+      "Requirement already satisfied: future>=0.15.2 in c:\\users\\calou\\anaconda3\\lib\\site-packages (from autograd) (0.18.2)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -298,7 +298,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -388,7 +390,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_advanced"
+    ]
+   },
    "source": [
     "**Question** L'application à laquelle nous destinons la fonction `Newton` demande-t'elle une grande précision ?\n",
     "Choisir une valeur de `eps` qui semble raisonnable et justifier l'ordre de grandeur choisi."
@@ -396,7 +402,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "source": [
     "*Réponse* : On souhaite avoir une précision accrue car il s'agit pleinement de construire nos courbes de niveau. Pour les fonctions introduites, les valeurs atteintes peuvent décrire jusqu'à [0 ; 0,125] sur une partie majeure de la figure. Ainsi, nous optons pour un ordre de grandeur raisonnable pour la précision de 0,0001."
    ]
@@ -404,7 +414,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "outputs": [],
    "source": [
     "N = 1000\n",
@@ -413,14 +427,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_advanced"
+    ]
+   },
    "source": [
     "**Question** Implémenter la fonction `Newton` en complétant le canevas ci-dessous"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "source": [
     "*Réponse* :"
    ]
@@ -428,7 +450,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "outputs": [],
    "source": [
     "def inv_J(x,y,F) :\n",
@@ -441,7 +467,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "outputs": [],
    "source": [
     "def Newton(F, x0, y0, eps=eps, N=N):\n",
@@ -461,14 +491,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_advanced"
+    ]
+   },
    "source": [
     "**Question** Tester votre implémentation de la fonction `Newton` ! On suggère par exemple de l'utiliser pour chercher un point $(x, y)$ de la ligne de niveau $0.8$ de $f_1$ (cf. Exemples de référence) qui vérifie en outre $x = y$ en utilisant le point $(0.8, 0.8)$. Puis de faire varier le point de référence, la contrainte supplémentaire, etc. et de représenter graphiquement les résultats."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "source": [
     "*Réponse* :"
    ]
@@ -476,7 +514,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -507,7 +549,11 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "outputs": [],
    "source": [
     "point = np.linspace(0.1,1.0,10)\n",
@@ -519,7 +565,10 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "tags": [
+     "level_basic"
+    ]
    },
    "outputs": [
     {
@@ -567,7 +616,11 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "outputs": [],
    "source": [
     "def F1bis(x,y) :\n",
@@ -583,7 +636,11 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Opérons la méthode de Newton basée sur ces fonctions à partir du point de départ (0.1,0.1)\n",
@@ -594,7 +651,11 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -635,7 +696,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_advanced"
+    ]
+   },
    "source": [
     "### Génération des points\n",
     "\n",
@@ -644,7 +709,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "source": [
     "*Réponse* :"
    ]
@@ -652,7 +721,11 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "outputs": [],
    "source": [
     "def rota(v) :\n",
@@ -672,7 +745,11 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "outputs": [],
    "source": [
     "def level_curve(f, x0, y0, c, delta=0.1, n=200, eps=eps):\n",
@@ -704,7 +781,10 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "tags": [
+     "level_basic"
+    ]
    },
    "outputs": [
     {
@@ -743,7 +823,11 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -781,7 +865,11 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -816,7 +904,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_advanced"
+    ]
+   },
    "source": [
     "### Bouclage et auto-intersection\n",
     "\n",
@@ -827,7 +919,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "source": [
     "*Réponse* :"
    ]
@@ -835,7 +931,11 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "outputs": [],
    "source": [
     "def level_curve2(f, x0, y0, c, delta=0.1, n=100, eps=eps):\n",
@@ -855,7 +955,8 @@
     "            nouveau_point = Newton(lambda x1,y1 : G(x, y, x1, y1, f, delta, c), temp_x, temp_y) \n",
     "            x, y = nouveau_point\n",
     "            tab[0,i+1], tab[1,i+1] = nouveau_point[0], nouveau_point[1]\n",
-    "        if np.sqrt((x - x0) ** 2 + (y - y0) ** 2) < delta and not(stop) : #Test si ce nouveau point n'est pas trop proche du 1er\n",
+    "        if np.sqrt((x - x0) ** 2 + (y - y0) ** 2) < delta and not(stop) : \n",
+    "            # Test si ce nouveau point n'est pas trop proche du 1er\n",
     "            stop = not(stop)\n",
     "            i_arret = i   # On relève l'indice concerné\n",
     "    return tab[:,:i_arret+2] # On extrait alors seulement la partie qui nous intéresse"
@@ -863,14 +964,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_advanced"
+    ]
+   },
    "source": [
     "**Question** Valider graphiquement le résultat au moyen des exemples de référence."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "source": [
     "*Réponse* :"
    ]
@@ -879,7 +988,10 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "tags": [
+     "level_basic"
+    ]
    },
    "outputs": [
     {
@@ -918,7 +1030,11 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -962,7 +1078,10 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "tags": [
+     "level_basic"
+    ]
    },
    "outputs": [
     {
@@ -995,7 +1114,10 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "tags": [
+     "level_basic"
+    ]
    },
    "outputs": [
     {
@@ -1034,14 +1156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Le calcul de l'ensemble des points pour l'exemple de f1 est ici :5.3 plus efficace\n"
+      "Le calcul de l'ensemble des points pour l'exemple de f1 est ici : 6.5 plus efficace\n"
      ]
     }
    ],
@@ -1051,15 +1177,21 @@
     "start = time.time()\n",
     "tab = level_curve(f1, 0.44,0.44, 0.8)\n",
     "end = time.time()\n",
+    "\n",
     "start2 = time.time()\n",
     "tab = level_curve2(f1, 0.44,0.44, 0.8)\n",
     "end2 = time.time()\n",
-    "print(\"Le calcul de l'ensemble des points pour l'exemple de f1 est ici :\" + str(int(10*(end - start)/(end2 - start2))/10) + \" plus efficace\")"
+    "print(\"Le calcul de l'ensemble des points pour l'exemple de f1 est ici : \" + \n",
+    "      str(int(10*(end - start)/(end2 - start2))/10) + \" plus efficace\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_advanced"
+    ]
+   },
    "source": [
     "# Calcul de l'aire d'un ensemble de sous-niveau\n",
     "On cherche à estimer l'aire d'un ensemble délimité par une courbe fermée, approchée par une ligne brisée comme les ensemble de niveau décrits précédemment.\n",
@@ -1073,7 +1205,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "source": [
     "*Réponse* :"
    ]
@@ -1081,7 +1217,11 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "outputs": [],
    "source": [
     "def area_squares(f,c,h) :\n",
@@ -1094,15 +1234,18 @@
     "    xmin, xmax = np.min(tab[0]), np.max(tab[0]) \n",
     "    ymin, ymax = np.min(tab[1]), np.max(tab[1])\n",
     "    cote = max(xmax - xmin, ymax - ymin) # Construction du carré recouvrant l'ensemble délimité par la courbe de niveau\n",
-    "    square1 = np.linspace(np.floor(10000 *xmin)/10000, np.floor(10000 * (xmin + cote) + 1)/10000, int(cote/h))  # Tableau des abscisses des petits carrés\n",
-    "    square2 = np.linspace(np.floor(10000 * ymin)/10000, np.floor(10000 * (ymin + cote) + 1)/10000, int(cote/h)) # Tableau des ordonnées des petits carrés\n",
+    "    square1 = np.linspace(np.floor(10000 *xmin)/10000, np.floor(10000 * (xmin + cote) + 1)/10000, int(cote/h))  \n",
+    "    # Tableau des abscisses des petits carrés\n",
+    "    square2 = np.linspace(np.floor(10000 * ymin)/10000, np.floor(10000 * (ymin + cote) + 1)/10000, int(cote/h)) \n",
+    "    # Tableau des ordonnées des petits carrés\n",
     "    n = int(np.floor(cote/h))\n",
     "    square = np.empty((n,n,2)) # Tableau des coordonnées des carrés de côté h\n",
     "    for i in range(n) :\n",
     "        for j in range(n) :\n",
     "            square[i,j,0] = square1[j] + h/2\n",
     "            square[i,j,1] = square2[i] + h/2\n",
-    "    proportion = np.sum(f(square[:,:,0],square[:,:,1]) <= c) / np.size(square[:,:,0]) # Calcul de la proportion recouverte à l'aide d'un masque\n",
+    "    proportion = np.sum(f(square[:,:,0],square[:,:,1]) <= c) / np.size(square[:,:,0]) \n",
+    "    # Calcul de la proportion recouverte à l'aide d'un masque\n",
     "    return proportion * (cote ** 2) # Conversion à l'aide de l'aire totale"
    ]
   },
@@ -1116,7 +1259,11 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "outputs": [],
    "source": [
     "def disque(x,y) :\n",
@@ -1126,18 +1273,23 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pour des carrés de côté h = 0.001, l'aire déterminée est de : 3.1382849701029323\n"
+      "Pour des carrés de côté 0.001, l'aire déterminée est de : 3.1382849701029323\n"
      ]
     }
    ],
    "source": [
-    "print(\"Pour des carrés de côté h = 0.001, l'aire déterminée est de : \"+str(area_squares(disque,1.,0.001)))"
+    "h = 0.001\n",
+    "print(\"Pour des carrés de côté \"+str(h)+\", l'aire déterminée est de : \"+str(area_squares(disque,1.,h)))"
    ]
   },
   {
@@ -1151,7 +1303,10 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "scrolled": false
+    "scrolled": false,
+    "tags": [
+     "level_basic"
+    ]
    },
    "outputs": [
     {
@@ -1189,7 +1344,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_advanced"
+    ]
+   },
    "source": [
     "**Question**  Expliquer comment cette approche peut être modifiée pour obtenir un encadrement de l'aire recherchée. \n",
     "Appliquer cette approche à l'ensemble de sous niveau considéré précédemment, pour en donner un encadrement à $10^{-2}$ près.\n"
@@ -1197,33 +1356,87 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "source": [
-    "*Réponse* : On peut alors balayer un ensemble de précision en h de manière décroissante, et évaluer l'erreur commise jusqu'à ce que l'on obtienne la précision en A voulue. Application pour l'ensemble de sous-niveau du disque unité :"
+    "*Réponse* : On peut alors balayer le tableau de booléens indiquant si les centres des petits carrés sont situés dans l'ensemble de sous-niveau, et l'on crée 2 autres tableaux :\n",
+    "- Le premier considère que le petit carré est compté dans le calcul de l'aire si et seulement si **ses 4 coins** sont situés dans K. On obtient ainsi une minoration de l'aire considérée.\n",
+    "- Le second considère que le petit carré est compté dans le calcul de l'aire si et seulement si **un de ses 4 coins** sont situés dans K. On obtient ainsi une minoration de l'aire considérée.\n",
+    "Ceci constitue bien un encadrement de l'aire de K, qui s'affine selon la précision h."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def area_squares_2(f,c,h) :\n",
+    "    \"Renvoie l'aire approchée de l'ensemble de sous-niveau de f associée à c\" \n",
+    "    \"à l'aide de la méthode des carrés pour un pas h\"\n",
+    "    def F(x,y,c=c) :\n",
+    "        \"Fonction des 2 conditions pour la méthode de Newton\"\n",
+    "        return np.array([f(x,y) - c, x-y])\n",
+    "    tab = level_curve2(f, Newton(F, c, c,eps,N)[0],Newton(F, c, c,eps,N)[1], c)\n",
+    "    xmin, xmax = np.min(tab[0]), np.max(tab[0]) \n",
+    "    ymin, ymax = np.min(tab[1]), np.max(tab[1])\n",
+    "    cote = max(xmax - xmin, ymax - ymin) # Construction du carré recouvrant l'ensemble délimité par la courbe de niveau\n",
+    "    square1 = np.linspace(np.floor(10000 * xmin)/10000, np.floor(10000 * (xmin + cote) + 1)/10000, int(cote/h)) \n",
+    "    # Tableau des abscisses des petits carrés\n",
+    "    square2 = np.linspace(np.floor(10000 * ymin)/10000, np.floor(10000 * (ymin + cote) + 1)/10000, int(cote/h)) \n",
+    "    # Tableau des ordonnées des petits carrés\n",
+    "    n = int(np.floor(cote/h))\n",
+    "    square = np.empty((n,n,2)) # Tableau des coordonnées des carrés de côté h\n",
+    "    for i in range(n) :\n",
+    "        for j in range(n) :\n",
+    "            square[i,j,0] = square1[j]\n",
+    "            square[i,j,1] = square2[i]\n",
+    "    tab_true_coin = f(square[:,:,0],square[:,:,1]) <= c\n",
+    "    tab_true_4_coins = np.zeros((n-1,n-1))\n",
+    "    for i in range(n-1) :\n",
+    "        for j in range(n-1) :\n",
+    "            tab_true_4_coins[i,j] = tab_true_coin[i,j] and (\n",
+    "            tab_true_coin[i + 1,j] and tab_true_coin[i,j + 1] and tab_true_coin[i + 1,j + 1] )\n",
+    "    tab_true_1_coin = np.zeros((n-1,n-1))\n",
+    "    for i in range(n-1) :\n",
+    "        for j in range(n-1) :\n",
+    "            tab_true_1_coin[i,j] = tab_true_coin[i,j] or (\n",
+    "            tab_true_coin[i + 1,j] or tab_true_coin[i,j + 1] or tab_true_coin[i + 1,j + 1] )\n",
+    "    proportion_1_coin = np.sum(tab_true_1_coin) / np.size(square[:,:,0]) \n",
+    "    # Calcul de la proportion recouverte à l'aide d'un masque\n",
+    "    proportion_4_coins = np.sum(tab_true_4_coins) / np.size(square[:,:,0]) \n",
+    "    # Calcul de la proportion recouverte à l'aide d'un masque\n",
+    "    return [proportion_4_coins * (cote ** 2), proportion_1_coin * (cote ** 2)]  # Conversion à l'aide de l'aire totale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "tags": [
+     "level_basic"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimation de l'aire à 10^-2 près : 3.133588232576799\n"
+      "L'aire du disque unité peut ainsi être encadrée : 3.1343 < pi < 3.1422 avec une précision de 0.001\n"
      ]
     }
    ],
    "source": [
-    "erreur = 1\n",
-    "n = 0\n",
-    "while erreur > 0.01 :\n",
-    "    h = 10 ** (-n)\n",
-    "    Ah = area_squares(disque,1.,h)\n",
-    "    erreur = abs(np.pi - Ah)\n",
-    "    n = n + 0.1\n",
-    "print(\"Estimation de l'aire à 10^-2 près : \"+str(Ah))"
+    "h = 0.001\n",
+    "aire_inf, aire_sup = round(area_squares_2(disque,1.,h)[0], 4), round(area_squares_2(disque,1.,h)[1], 4)\n",
+    "print(\"L'aire du disque unité peut ainsi être encadrée : \" + str(aire_inf) + ' < pi < ' + str(aire_sup) + \" avec une précision de \" + str(h))"
    ]
   },
   {
@@ -1265,13 +1478,6 @@
     "Comparer les méthodes entre elles, en précisant les avantages et défauts relatifs de chacune d'elles. \n",
     "(On pourra appuyer la réponse sur des tests numériques ainsi que sur des arguments théoriques)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
