--- a/Projet numerique_ Grosmaitre_Hayoun_Calcul différentiel.ipynb
+++ b/Projet numerique_ Grosmaitre_Hayoun_Calcul différentiel.ipynb
@@ -1496,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {
     "tags": [
      "level_basic"
@@ -1504,16 +1504,15 @@
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-48-843ea052f055>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-48-843ea052f055>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    print(\"L'aire du disque avec un point à l'intérieur est de : \" + str(aire_disque_triangle ([0.8, 0.], 0.01))\u001b[0m\n\u001b[1;37m                                                                                                                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L'aire du disque avec un point à l'intérieur est de : 3.141540323311215\n"
      ]
     }
    ],
    "source": [
-    "print(\"L'aire du disque avec un point à l'intérieur est de : \" + str(aire_disque_triangle ([0.8, 0.], 0.01))"
+    "print(\"L'aire du disque avec un point à l'intérieur est de : \" + str(aire_disque_triangle ([0.8, 0.], 0.01)))"
    ]
   },
   {
